--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -9,6 +9,8 @@ Before going further, it makes sense to define what the terms \emph{endangered},
 
 In this section, I will generally define these terms: \textit{endangered}, \textit{moribund}, \textit{extinct}, \textit{dormant}, \textit{revitalised}, \textit{historic} and \textit{constructed} languages; \textit{minority}, \textit{low-resource}, \textit{under-resourced}, \textit{incident} and \textit{surprise} languages; and finally \textit{computer} or \textit{computational} languages. This will help inform why I've chosen to focus on low resource languages, and specifically low resource natural languages with living populations.
 
+All of these terms are controversial, and work within larger frameworks and ontologies. I'll cover this in Subsection~\ref{subsec:metrics} on metrics after giving this general overview of definitions.
+
 \subsubsection{Endangered, revitalised, and extinct languages}
 
 \emph{Endangered} languages are human languages that are in danger of extinction. The term is borrowed from the scientific literature describing animals; just as there exists as very real possibility that one day there will be no more Australasian Bittern specimens in the wilds of Australia, it is also possible that one day there may be no living speakers of Guugu Yimithirr. The term is not complete analogous; we can still read Tocharian texts, but Tocharian is not considered to be a living language, but \textit{extinct}, as there are no speakers who use it regularly (and who are not scholars of obscure languages).
@@ -31,7 +33,7 @@ Heading back to natural languages, Latin would largely not be considered a revit
 
 Gothic is considered \textit{extinct} today, as it has no direct descendants, although it is still studied, and although there is a small community of writers who continue to use the language, and at least one publishing company which publishes modern work in Gothic\footnote{\href{https://wordhoardpress.com}{https://wordhoardpress.com}} (incidentally run by, of all people, me). Not all languages have sufficient texts to be revitalised or used today: Etruscan, Minoan, and Pictish are good examples.
 
-One could argue that some languages may be considered dormant even if there are native speakers alive, if they do not speak the language. For instance, there are a few cases where a couple of speakers are left of a language, but they don't speak it to each other due to interpersonal differences. Most famously, there is the apocryphal story of Ayapeneco, where a global m\^eme ensued from an imagined feud between the last two speakers, to the point where Vodafone released a video claiming that they helped bring the men together to save the language (to the chagrin of actual linguists and anthropologists who had worked on the language for decades).\footnote{\href{http://stories.schwa-fire.com/who\_save\_ayapaneco\#chapter-113060}{http://stories.schwa-fire.com/who\_save\_ayapaneco\#chapter-113060}} This has actually happened elsewhere, such as with Nisenan \citep{snyder2004practice}. Another example might be Ishi, the last Yahi and a speaker of Yana, who explained that he had no name, because there was no other Yahi man to formally introduce him. Ishi means 'man' in Yana \citep{kroeber1973ishi}.
+One could argue that some languages may be considered dormant even if there are native speakers alive, if they do not speak the language. For instance, there are a few cases where a couple of speakers are left of a language, but they don't speak it to each other due to interpersonal differences. Most famously, there is the apocryphal story of Ayapeneco, where a global m\^eme ensued from an imagined feud between the last two speakers, to the point where Vodafone released a video claiming that they helped bring the men together to save the language (to the chagrin of actual linguists and anthropologists who had worked on the language for decades).\footnote{\href{http://stories.schwa-fire.com/who\_save\_ayapaneco\#chapter-113060}{http://stories.schwa-fire.com/who\_save\_ayapaneco\#chapter-113060}} This has actually happened elsewhere, such as with Nisenan \citep{snyder2004practice}. Another example might be Ishi, the last Yahi and a speaker of Yana, who explained that he had no name, because there was no other Yahi man to formally introduce him. Ishi means 'man' in Yana, and is what Ishi consented to be called as a placeholder for his actual name \citep{kroeber1973ishi}.
 
 Such cases are extreme, and there will be exceptions to almost any of these categories. Even for living languages, questions of identification can be difficult. For instance, \cite{gilRiau} points to at least a dozen different interpretations of what Riau Indonesian might technically be. Defining language is beyond the scope of this thesis - however, I would be amiss not to mention this problem here.
 
@@ -66,12 +68,12 @@ Another couple of terms often used in this general context are \textit{incident}
 
 A \textit{computer} or \textit{computational} language is a formalised language used to communicate instructions to a machine. There are a large variety of names and variants, and the definition here may be construed as insufficient. For the purposes of this thesis, a computer language is for talking to a machine, and is demonstrably different than a human language, which is generally used for communicating with humans. This definition is important only in so much as it helps clarify that we are talking about human languages when we mean low resource or endangered languages, not computer languages. The relevancy, usage, or status of computer languages is largely irrelevant here, unless it touches on resources used on human languages. For instance, any grammar written in COBOL, a sixty year old language, may be less accessible to open source coders who write primarily in Python or JavaScript, two popular languages used on the web and in the FLOSS ecosystem today. This type of situation will be covered in more depth in Section~\ref{subsec:digital-permanence}.
 
-Other terms used in exploring the theory of language, semiotics, or formal language theory - such as context-free or recursively-enumerable languages - are likewise unimportant to this thesis unless they touch on human and low resource languages directly in some tangible way.
+Other terms used in exploring the theory of language, semiotics, or formal language theory - such as context-free or recursively-enumerable languages - are outside of the scope of this thesis unless they touch on human and low resource languages directly in some tangible way.
 
 \subsection{Metrics for Language Vitality}
 \label{subsec:metrics}
 
-Language health or vitality is a topic of increasing scholarship and interest. Superficially, it makes sense to use a similar system to classify languages as one would classify species, using the metrics defined by the International Union for Conservation of Nature (IUCN)\footnote{\href{http://www.iucnredlist.org/}{http://www.iucnredlist.org/}}. They have nine levels of classification: Extinct, Extinct in the Wild, Critically Endangered, Endangered, Vulnerable, Near Threatened, Least Concern, Data Deficient and Not Evaluated. However, the system is not directly transferable - how would a dormant language be classified? One can see immediately that there is a need for a language-specific rating system.
+Language health or vitality is a topic of increasing scholarship and interest. Superficially, it makes sense to use a similar system to classify languages as one would classify biological species, using the metrics defined by the International Union for Conservation of Nature (IUCN)\footnote{\href{http://www.iucnredlist.org/}{http://www.iucnredlist.org/}}. They have nine levels of classification: Extinct, Extinct in the Wild, Critically Endangered, Endangered, Vulnerable, Near Threatened, Least Concern, Data Deficient and Not Evaluated. However, the system is not directly transferable - how would a dormant language be classified? One can see immediately that there is a need for a language-specific rating system.
 
 It is perhaps unsurprising that there are various metrics which can be used to classify the health of a language and its community. In this section, I'll explain these metrics in detail, focusing on the GIDS, EGIDS, UNESCO, and LEI measurements, as suggested by \citet{yang2017toward} as the main players in the field.
 
@@ -89,9 +91,9 @@ The Graded Intergenerational Disruption Scale, developed by \citet{fishman1991re
 \subsubsection{The UNESCO measurement scale}
 \label{subsec:unesco}
 
-The United Nations Educational, Scientific and Cultural Organization (UNESCO) is a specialised agency of the United Nations. In 2001, at the 31st Session of the UNESCO General Conference, they officially recognised that biodiversity, cultural diversity, and linguistic diversity are related. This viewpoint is relatively recent, and reflects increasing appreciation that culturally diverse regions tend to collocate with biodiverse regions, and that saving diversity implies saving both \citep{nettle2000vanishing, maffi2001biocultural, , anderson2006language, krauss2007keynote, gorenflo2012co} (as discussed explicitly in \citet{maffi2001}, of which all of the authors were also members of the UNESCO Ad Hoc Expert Group on Endangered Languages). Encouragingly, UNESCO clarified at this event that sustaining and encouraging linguistic diversity lies within their charter.
+Chronologically, the UNESCO rating was the next major scale in the field. The United Nations Educational, Scientific and Cultural Organization (UNESCO) is a specialised agency of the United Nations. In 2001, at the 31st Session of the UNESCO General Conference, they officially recognised that biodiversity, cultural diversity, and linguistic diversity are related. This viewpoint is relatively recent, and reflects increasing appreciation that culturally diverse regions tend to collocate with biodiverse regions, and that saving diversity implies saving both \citep{nettle2000vanishing, maffi2001biocultural, anderson2006language, krauss2007keynote, gorenflo2012co} (as discussed explicitly in \citet{maffi2001}, of which all of the authors were also members of the UNESCO Ad Hoc Expert Group on Endangered Languages). Encouragingly, UNESCO clarified at this event that sustaining and encouraging linguistic diversity lies within their charter.
 
-In their publication from that conference, \citep{brenzinger2003language} lay out nine different metrics for measuring language vitality: six evaluate the vitality and state of endangerment, two language attitudes, and one related to urgency of documentation. The UNESCO system is rigorous in its refusal to apply a single score to a language, as that would smooth over the complexities of language usage. The six factors for vitality are: intergenerational language transmission (as with GIDS), absolute number of speakers, proportion of speakers within the total population, trends in existing language domains, response to new domains and media, and materials for language education and literacy.
+In their publication from that conference, \citet{brenzinger2003language} lay out nine different metrics for measuring language vitality: six evaluate the vitality and state of endangerment, two language attitudes, and one related to urgency of documentation. The UNESCO system is rigorous in its refusal to apply a single score to a language, as that would smooth over the complexities of language usage. The six factors for vitality are: intergenerational language transmission (as with GIDS), absolute number of speakers, proportion of speakers within the total population, trends in existing language domains, response to new domains and media, and materials for language education and literacy.
 
 For each of these, they further break rating down into categories. For instance, when regarding intergenerational language transmission, they specify six different possible ratings - safe, unsafe, definitively endangered, severely endangered, critically endangered, and extinct - and equate each rating with a score from 5 to 0. Here one of the primary issues with the UNESCO rating can be seen  (as pointed out by \citet{lewis2010assessing}) - namely, that 'safe' is an incredibly large category that needs more fine-grained categories, as it would account for any GIDS-rated language above Level 6.
 
@@ -109,11 +111,11 @@ Importantly, UNESCO clarifies that it does not suggest using one metric over ano
  \label{fig:unesco}
 \end{figure}
 
-The UNESCO rating is mostly used in the \textit{UNESCO Atlas of the World?s Languages in Danger} \citep{unesco2014unesco}.
+The UNESCO ratings for languages are listed in the \textit{UNESCO Atlas of the World?s Languages in Danger} \citep{unesco2014unesco}.
 
 \subsubsection{EGIDS}
 
-\citet{lewis2010assessing}, the authors of Ethnologue \citep{lewis2009ethnologue}\footnote{Also a website available at \href{https://www.ethnologue.com/}{https://www.ethnologue.com/}.}, pointed out some of the issues with GIDS which necessitate the creation of a new standard, and which could also eclipse or inform the UNESCO rating. First, the levels are static, and don't account for directionality on the part of a language community up or down the strata. Second, there are language types which aren't included - for instance, there isn't a supranational level for extremely well-off languages, nor is there are level for extinct or dormant languages. Thirdly, GIDS focuses on intergenerational disruption in Level 5 and down, but in Level 4 and higher it focuses more on institutions, and this isn't accounted for well enough in the framework, which primarily focuses on parents as being the primary agents of language transmissions. Finally, the lower levels are not granular enough to cover the many complexities needed for language revitalisation groups.
+Lewis and Simons, the authors of Ethnologue \citep{lewis2009ethnologue}\footnote{Also a website available at \href{https://www.ethnologue.com/}{https://www.ethnologue.com/}.}, pointed out some of the issues with GIDS which necessitate the creation of a new standard, and which could also eclipse or inform the UNESCO rating \citep{lewis2010assessing}. First, the levels are static, and don't account for directionality on the part of a language community up or down the strata. Second, there are language types which aren't included - for instance, there isn't a supranational level for extremely well-off languages, nor is there are level for extinct or dormant languages. Thirdly, GIDS focuses on intergenerational disruption in Level 5 and down, but in Level 4 and higher it focuses more on institutions, and this isn't accounted for well enough in the framework, which primarily focuses on parents as being the primary agents of language transmissions. Finally, the lower levels are not granular enough to cover the many complexities needed for language revitalisation groups.
 
 EGIDS - the Expanded GIDS - serves these needs by providing more granular definitions. It also draws on the extensive knowledge of languages and their usage provided not only by Ethnologue, but also by the UNESCO Atlas and the community of linguists working with the Summer Institute of Linguistics (SIL), who fund and published Ethnologue. Figure~\ref{table:egids} shows the main categories, taken from the Ethnologue website\footnote{\href{https://www.ethnologue.com/about/language-status}{https://www.ethnologue.com/about/language-status}}. The table has been updated since \citet{lewis2010assessing}, in particular to also account for signed languages \citep{bickford2015rating}. The addition of a Level 0 and two levels beneath the scale are evident, as well as more granularity in the GIDS scale, such as can be seen with Level 6, which now has two levels, Level 6a Vigorous and Level 6b Threatened.
 
@@ -158,25 +160,25 @@ ethnocultural  community  and  to  differentiate  between  life-threatening  and
 
 \subsubsection{The Language Endangerment Index (LEI)}
 
-Just as EGIDS expanded on GIDS, the Language Endangerment Index (LEI) was formed to resolve some of the issues with EGIDS, as well as to respond to GIDS, the UNESCO rating, and the rating in \citet{krauss2007classification} which focused almost exclusively on different ages of speakers and classified all languages with children speakers as 'stable', and all with over a million speakers as 'safe'. \citet{lee2016assessing} describe LEI for its use in The Catalogue of Endangered Languages (ELCat), part of the Google-powered Endangered Languages Project\footnote{\href{endangeredlanguages.com}{endangeredlanguages.com}}. The project isn't only sponsored by Google, but also by an NSF Grant\footnote{\href{https://www.nsf.gov/awardsearch/showAward?AWD\_ID=1058096}{https://www.nsf.gov/awardsearch/showAward?AWD\_ID=1058096}}, and is an ambitious project (like UNESCO and Ethnolohue) to catalogue all languages and to provide specific metrics of language vitality.
+Just as EGIDS expanded on GIDS, the Language Endangerment Index (LEI) was formed to resolve some of the issues with EGIDS, as well as to respond to GIDS, the UNESCO rating, and the rating in \citet{krauss2007classification} which focused almost exclusively on different ages of speakers and classified all languages with children speakers as 'stable', and all with over a million speakers as 'safe'. \citet{lee2016assessing} describe LEI for its use in The Catalogue of Endangered Languages (ELCat), part of the Google-powered Endangered Languages Project\footnote{\href{endangeredlanguages.com}{endangeredlanguages.com}}. The project isn't only sponsored by Google, but also by an American governmental National Science Foundation (NSF) grant\footnote{\href{https://www.nsf.gov/awardsearch/showAward?AWD\_ID=1058096}{https://www.nsf.gov/awardsearch/showAward?AWD\_ID=1058096}}, and is an ambitious project (like UNESCO and Ethnologue) to catalogue all languages and to provide specific metrics of language vitality.
 
-The authors, in describing LEI, going into detail explaining how previous classifications, while they "highlight[s] the immensity of the problem at hand", can not easily apply to certain languages, and that these exceptions are critical to understanding whether the metrics are useful as opposed to being exceptions which prove the rule. Unlike they other papers, they explicitly mention some languages - for instance, looking at how \citet{dwyer2012tools} points out that Wutun, a Chinese-Tibetan-Mongolic language, is endangered due to a variety of factors even if transgenerational transmission is not at risk. A similar case could be made for Naskapi (see Section~\ref{sec:naskapi} for more on this).
+The authors, in describing LEI, go into detail explaining how previous classifications, while they "highlight[s] the immensity of the problem at hand", can not easily apply to certain languages, and that these exceptions are critical to understanding whether the metrics are useful as opposed to being exceptions which prove the rule. Unlike the other papers, they explicitly mention some languages. For instance, they mention how \citet{dwyer2012tools} points out that Wutun, a Chinese-Tibetan-Mongolic language, is endangered due to a variety of factors, even if transgenerational transmission is not at risk - thus, GIDS or EGIDS may not satisfactorily categorise the language. A similar case could be made for Naskapi (see Section~\ref{sec:naskapi} for more on this).
 
 The LEI uses four factors: intergenerational transmission, absolute number of speakers, speaker number trends (whether increasing or decreasing), and domains of use. Each of these is rated, like the UNESCO rating on a scale from null to five - however, unlike UNESCO, they add these numbers up to produce a single rating. The higher it is, the more likely the language is endangered. The scales are also somewhat different; for instance, number of speakers runs on orders of magnitude, with 100,000 being the top bound for a safe language (and not a million, like in \citet{krauss2007classification}).
 
 \subsubsection{A response to qualitative metrics}
 
-\citet{lee2016assessing} point out further issues with some of the other assessments - most notably that "while the UNESCO framework is broad and its factors comprehensive, it does not give an overall vitality score to the language being assessed, making it difficult to compare accurately across different language" and that "while an assessment of the type and quality of documentation is doubtlessly important because it helps indicate the potential for revitalization and the urgency of further research, it is not clear that the type and quality of documentation directly affects the vitality of a language." These two points are interesting, because they reflect how the situation of \citet{lee2016assessing} influences their judgement and their decision in making LEI at all. The authors were aware that they were being quantitative:
+\citet{lee2016assessing} point out further issues with some of the other assessments - most notably that "while the UNESCO framework is broad and its factors comprehensive, it does not give an overall vitality score to the language being assessed, making it difficult to compare accurately across different language" and that "while an assessment of the type and quality of documentation is doubtlessly important because it helps indicate the potential for revitalization and the urgency of further research, it is not clear that the type and quality of documentation directly affects the vitality of a language." These two points are interesting, because they reflect how the situation of \citet{lee2016assessing} influences their judgement and their decision in making LEI at all. The authors were aware that they were being overtly quantitative in their approach:
 
 \begin{quote}
 Some may prefer a more nuanced examination of a language's vitality, with the view that the factors responsible for a language's endangerment are too complex to be compared across languages. Researchers of this view would rally against quantitative measures, stating that quantitative measures can hardly be accurate. ... ELCat researchers, while sympathetic to these points of view, maintain that without understanding and investigating fundamental common factors responsible for language endangerment, very little progress will be made in assessing language vitality and, consequently, less can be done to help communities preserve their languages. ELCat strikes a balance between these different perspectives.
 \end{quote}
 
-As \citet{grenoble2016response} points out, this misses the point of qualitative rebuttals, by claiming that accuracy is the most salient argument. It doesn't have to be, as there are more pressing concerns. For instance, and as \citet{grenoble2016response} points out, all of the metrics were built on the assumptions that quantifying language endangerment is useful, and that assessment directly leads to empowering communities to revitalise their language. Neither of these are directly backed up by empirical research. More pressingly, language itself is not indisputable something that is countable or measurable, and to think so is to reflect Western, modernist ideologies surrounding language as a distinct entity which is formalised in writing and education. Language could be viewed alternatively as inextricable from the speaker and the utterance, especially by language groups which view themselves as separate from a nation-state or an ethnographic group \citep{bodo2017language}. To view language otherwise is to confine language to a countable, commodifiable entity in a post-colonial sense, which affects how the language is viewed and can have real effects on language communities. Even viewing linguistic biodiversity as something to be 'saved' raises ideological  concerns, as Haspelmath (one of the main editors of \citet{wals}) notes. \footnote{\href{dlc.hypotheses.org/195}{dlc.hypotheses.org/195}} Indeed, post-colonial attitudes towards language endangerment may be endemic; \citet{newman1998we} certainly suggests that non-Western linguists cannot adequately document or revitalise their own languages without Western training, which presupposes that to be an informed researched one must also conform to Western ideologies. Against this backdrop, \citet{lee2016assessing}'s claims that accuracy is something that can be attained seems to miss the mark; rather, the canonical approach to metrics is in itself a flawed approach that carries with it certain uncomfortable presumptions.
+As \citet{grenoble2016response} points out, this misses the point of qualitative rebuttals, by claiming that accuracy is the most salient argument. It doesn't have to be, as there are more pressing concerns. For instance, and as \citet{grenoble2016response} points out, all of the metrics were built on the assumptions that quantifying language endangerment is useful, and that assessment directly leads to empowering communities to revitalise their language. Neither of these are directly backed up by empirical research. More pressingly, language itself is not indisputably something that is countable or measurable, and to think so is to reflect Western, modernist ideologies surrounding language, viewing a language as a distinct entity which is formalised in writing and education. Language could be viewed alternatively as inextricable from the speaker and the utterance, and this view is more likely to be taken by language groups which view themselves as separate from a nation-state or an ethnographic group \citep{bodo2017language}. To view language otherwise is to confine language to a countable, commodifiable entity in a post-colonial sense, which affects how the language is viewed and can have real effects on language communities. Even viewing linguistic biodiversity as something to be 'saved' raises ideological  concerns, as Haspelmath (one of the main editors of \citet{wals}) notes. \footnote{\href{dlc.hypotheses.org/195}{dlc.hypotheses.org/195}} Indeed, post-colonial attitudes towards language endangerment may be endemic; \citet{newman1998we} certainly suggests that non-Western linguists cannot adequately document or revitalise their own languages without Western training, which presupposes that to be an informed researched one must also conform to Western ideologies. Against this backdrop, \citet{lee2016assessing}'s claims that accuracy is something that can be attained seems to miss the mark; rather, the canonical approach to metrics is in itself a flawed approach that carries with it certain uncomfortable presumptions.
 
 This thesis cannot hope to resolve these issues, nor is it meant to be an overview of the field of language vitality or endangerment as ideology. However, it is worth noting that metrics of language vitality do not exist in a vacuum, and that documentation and computational efforts are also a part of wider questions. Literacy is not a domain into which a language has to ascend to be seen as 'safe' or 'vital', and technological progress should not be viewed independently of an assessment of what exactly progress is.
 
-Some things can be done, however. Terminologically, 'low-resource' is intentionally somewhat neutral, as compared to 'minority', 'endangered', or other terms that reflect Western viewpoints. Similarly, using the term language vitality as opposed to language endangerment 'represents a significant shift in the representation of attitudes toward the rhetoric of indigenous languages to one away from dire predictions about endangerment to action-oriented attitudes about vitality and sustainability \citep{grenoble2016response}.' These terms will be used for the rest of the paper, and any statements about resource development should be viewed as part of a narrower question of digital development (in the sense of building resources) for a specific, almost na\"ively countable view of language, unless otherwise specified (as in Section~\ref{sec:case-studies}).
+Some things can be done, however. Terminologically, 'low-resource' is intentionally somewhat neutral, as compared to 'minority', 'endangered', or other terms that reflect Western viewpoints. Similarly, using the term language vitality as opposed to language endangerment "represents a significant shift in the representation of attitudes toward the rhetoric of indigenous languages to one away from dire predictions about endangerment to action-oriented attitudes about vitality and sustainability \citep{grenoble2016response}." These terms will be used for the rest of the paper, and any statements about resource development should be viewed as part of a narrower question of digital development (in the sense of building resources) for a specific, almost na\"ively countable view of language, unless otherwise specified (as in Section~\ref{sec:case-studies}).
 
 % TODO Alexis: would be interesting to also discuss how these metrics might apply for the set of languages you're interested in (as defined in 2.1)
 
