Work on digital presence

--- a/2-endangered-languages.tex
+++ b/2-endangered-languages.tex
@@ -187,6 +187,11 @@ Some things can be done, however. Terminologically, 'low-resource' is intentiona
 
 \subsection{Digital presence}
 
+Digital presence, briefly alluded to previously, can be thought of as the amount of language data available through digital sources. A looser definition could be 'the amount of written text on the web', but this would miss out on several important considerations. First, linguistic data does not have to be written to be digitally encoded; videos and audio data are both examples of digital content which is often digitally encoded. In some cases, pictures are also relevant, especially for signed languages or for examples of written text, such as in the millions of scans of papyrus from the Egyptian city of Oxyrhynchus, which are being translated using a crowd-sourced system by thousands of volunteers \citep{williams2014computational}, or for other language mediums, such as the khipu knot system used by the pre-Columbian Incan civilisation \citep{quilter2002narrative}. Secondly, the web (hereafter meant to refer to the World Wide Web) is not the only corpus of knowledge, nor is it the only network through which data can be accessed. Trivial example of other corpuses would be local files collected by individual field researchers that are backed up on hard drives; a similar example of another network would be a local area network in offline areas, or a university intranet. 
+
+However, digital presence can best be thought of schematically as a new domain for language use, and it is overwhelmingly today represented on the web. Ten years ago, it was fashionable to include references to the web "as a a corpus" (as \citet{scannell2007crubadan}, for instance, cited \citep{resnik1999mining, ghani2001mining, kilgarriff2001web}, although the latter two were in reference to low-resource languages); today, it is more common to cite studies on digital natives such as the 20,000 citation-strong \citet{prensky2001digital} paper\footnote{This number is from Google Scholar (\href{https://scholar.google.com}{https://scholar.google.com}) accessed April 9, 2018.}, or to assume that the web, and occasionally phone networks, are the main locations for digital communication.
+
+
 
 % A better lower bound might be the existence of a Bible. The Bible is often the first thing translated into a language, and there is a body of research that uses partial or full translations of the Bible for training NLP systems as a result \citep{chew2006evaluation, }.
 
