--- a/references.bib
+++ b/references.bib
@@ -22,6 +22,44 @@
   publisher={De Gruyter Open}
 }
 
+@inproceedings{resnik1999mining,
+  title={Mining the web for bilingual text},
+  author={Resnik, Philip},
+  booktitle={Proceedings of the 37th annual meeting of the Association for Computational Linguistics on Computational Linguistics},
+  pages={527--534},
+  year={1999},
+  organization={Association for Computational Linguistics}
+}
+
+@inproceedings{kilgarriff2001web,
+  title={Web as corpus},
+  author={Kilgarriff, Adam and Grefenstette, Gregory},
+  booktitle={Proceedings of Corpus Linguistics},
+  year={2001},
+  volume={2001},
+  pages={342-344},
+  location={Lancaster University}
+}
+
+@inproceedings{ghani2001mining,
+  title={Mining the web to create minority language corpora},
+  author={Ghani, Rayid and Jones, Rosie and Mladeni{\'c}, Dunja},
+  booktitle={Proceedings of the tenth international conference on Information and knowledge management},
+  pages={279--286},
+  year={2001},
+  organization={ACM}
+}
+
+@article{prensky2001digital,
+  title={Digital natives, digital immigrants part 1},
+  author={Prensky, Marc},
+  journal={On the horizon},
+  volume={9},
+  number={5},
+  pages={1--6},
+  year={2001},
+  publisher={MCB UP Ltd}
+}
 
 @article{grenoble2016response,
   title={A response to ‘Assessing levels of endangerment in the Catalogue of Endangered Languages (ELCat) using the Language Endangerment Index (LEI)’, by Nala Huiying Lee \& John Van Way},
@@ -327,6 +365,23 @@
   pages={271--292},
   year={2016},
   publisher={Cambridge University Press}
+}
+
+@book{quilter2002narrative,
+  title={Narrative threads: Accounting and recounting in Andean khipu},
+  author={Quilter, Jeffrey and Urton, Gary},
+  year={2002},
+  publisher={University of Texas Press}
+}
+
+
+@inproceedings{williams2014computational,
+  title={A computational pipeline for crowdsourced transcriptions of Ancient Greek papyrus fragments},
+  author={Williams, Alex C and Wallin, John F and Yu, Haoyu and Perale, Marco and Carroll, Hyrum D and Lamblin, Anne-Francoise and Fortson, Lucy and Obbink, Dirk and Lintott, Chris J and Brusuelas, James H},
+  booktitle={Big Data (Big Data), 2014 IEEE International Conference on},
+  pages={100--105},
+  year={2014},
+  organization={IEEE}
 }
 
 @article{hinton2001sleeping,
